<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IT资讯</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>


    <!-- 51CTO-->
    <string name="network">网络技术</string>
    <string name="develop">开发技术</string>
    <string name="govern">IT管理</string>
    <string name="life">IT生活</string>

    <!-- CSDN-->
    <string name="industry">业界</string>
    <string name="mobile">移动</string>
    <string name="research">研发</string>
    <string name="mazagine">程序员杂志</string>
    <string name="cloud">云计算</string>

    <!-- 博客园-->
    <string name="home">首页</string>
    <string name="essence">精华</string>
    <string name="pick">候选</string>
    <string name="news">新闻</string>

    <!-- ITeye-->
    <string name="information">资讯</string>
    <string name="elite">精华</string>
    <string name="blog">博客</string>
    <string name="special">专栏</string>


    <!--数据库和文件路径-->
    <string name="dir">/csdn</string>
    <string name="app_dir">/app</string>
    <string name="db_dir">/database</string>
    <string name="img_dir">/img</string>

    <!-- CSDN-->
    <string-array name="csdn">
        <item>业界</item>
        <item>移动</item>
        <item>研发</item>
        <item>程序员杂志</item>
        <item>云计算</item>
    </string-array>

    <!-- 51CTO-->
    <string-array name="cto">
        <item>网络技术</item>
        <item>开发技术</item>
        <item>IT管理</item>
        <item>IT生活</item>
    </string-array>

    <!-- 博客园-->
    <string-array name="blog_house">
        <item>首页</item>
        <item>精华</item>
        <item>候选</item>
        <item>新闻</item>
    </string-array>

    <!-- ITeye-->
    <string-array name="iteye">
        <item>资讯</item>
        <item>精华</item>
        <item>博客</item>
        <item>专栏</item>
    </string-array>
</resources>
