<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_gravity="bottom"
    android:background="#0D2B2222"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/id_iv_tabline"
        android:layout_width="80dp"
        android:layout_height="3dp"
        android:src="@drawable/tabline9" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/id_ll_chat"
            android:layout_width="3dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/industry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/industry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="3dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile"
                android:textColor="#008000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="3dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/research"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/research"
                android:textColor="#008000" />
        </LinearLayout>

        <LinearLayout
        android:layout_width="3dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/mazagine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mazagine"
            android:textColor="#008000" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="3dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/clour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cloud"
                android:textColor="#008000" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
